--- a/dms-admin-ui/src/app/app.component.html
+++ b/dms-admin-ui/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="p-3 bg-dark text-white">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/home" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+      <a href="/users" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-binary-fill" viewBox="0 0 16 16">
           <path d="M5.526 10.273c-.542 0-.832.563-.832 1.612 0 .088.003.173.006.252l1.559-1.143c-.126-.474-.375-.72-.733-.72zm-.732 2.508c.126.472.372.718.732.718.54 0 .83-.563.83-1.614 0-.085-.003-.17-.006-.25l-1.556 1.146z"/>
           <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-2.45 8.385c0 1.415-.548 2.206-1.524 2.206C4.548 14.09 4 13.3 4 11.885c0-1.412.548-2.203 1.526-2.203.976 0 1.524.79 1.524 2.203zm3.805 1.52V14h-3v-.595h1.181V10.5h-.05l-1.136.747v-.688l1.19-.786h.69v3.633h1.125z"/>
@@ -14,7 +14,6 @@
 
       <div class="text-end">
         <button type="button" class="btn btn-outline-light me-2" (click)="goToPage('login')">Login</button>
-        <button type="button" class="btn btn-warning" (click)="goToPage('register')">Register</button>
         <button type="button" class="btn btn-outline-light me-2">Documents</button>
         <button type="button" class="btn btn-warning">Log out</button>
       </div>
@@ -28,8 +27,8 @@
 
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center justify-content-center">
-      <span class="text-muted">© {{ date.getDate() }}.{{ date.getMonth() + 1 }}.{{ date.getFullYear() }} - ETF BL</span>
+    <div class="col-md-4 d-flex align-items-center justify-content-center justify-content-lg-start">
+      <span class="text-muted">© University of Banja Luka: {{ date.getDate() }}.{{ (date.getMonth() + 1 < 10 ? '0' : '') + (date.getMonth() + 1) }}.{{ date.getFullYear() }}.</span>
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
